@@ -13,6 +13,9 @@ Trunk (not yet released)
     AVRO-843. C#: Change Visual Studio project files to specify .NET 3.5.
     (Dmitry Kovalev via cutting)
 
+    AVRO-1583. Java: Add stdin support to the tojson tool.
+    (Clément Mahtieu via cutting)
+
   BUG FIXES
 
     AVRO-1553. Java: MapReduce never uses MapOutputValueSchema (tomwhite)
